# estimating-hank-nn

./: .gitignore  README.md  pyproject.toml
examples/: analytical.html  analytical.ipynb  analytical.py  colab_analytical.ipynb
examples/save/: analytical_example.pkl  particle_filter.pkl
src/estimating_hank_nn/: __init__.py  helpers.py  networks.py  plot_helpers.py  structures.py
